@@ -12,26 +12,30 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-plugins {
-    id 'firebase-library'
-    id 'com.google.protobuf'
-}
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 
-configurations.create("protobuild")
-dependencies {
-    protobuild project(path: ":encoders:protoc-gen-firebase-encoders", configuration: "shadow")
+plugins {
+    id 'com.google.protobuf'
+    id 'firebase-library'
+    id("kotlin-android")
 }
+configurations.create("protobuild")
 
 protobuf {
+    dependencies {
+        // Include the project dependency directly
+        protobuild project(path: ':encoders:protoc-gen-firebase-encoders', configuration: 'shadow')
+}
     protoc {
-        artifact = "com.google.protobuf:protoc:$protocVersion"
+        artifact = libs.protoc.get().toString()
     }
     plugins {
         firebaseEncoders {
-            path = configurations.protobuild.asPath
+            path = project(':encoders:protoc-gen-firebase-encoders').buildDir.path + '/libs' +'/protoc-gen-firebase-encoders-all.jar'
         }
     }
     generateProtoTasks {
+
         all().each { task ->
             task.dependsOn configurations.protobuild
             task.inputs.file 'code_gen_cfg.textproto'
@@ -42,15 +46,21 @@ protobuf {
             }
             task.builtins {
                 remove java
+                remove kotlin
             }
+
         }
     }
 }
 
 
 firebaseLibrary {
-    libraryGroup "messaging"
+    libraryGroup = "messaging"
     testLab.enabled = false
+    releaseNotes {
+        name.set("{{messaging_longer}}")
+        versionName.set("messaging")
+    }
 }
 
 android {
@@ -58,9 +68,9 @@ android {
         timeOutInMs 60 * 1000
     }
     namespace "com.google.firebase.messaging"
-    compileSdkVersion project.targetSdkVersion
+    compileSdkVersion project.compileSdkVersion
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion project.minSdkVersion
         targetSdkVersion project.targetSdkVersion
         versionName version
 
@@ -68,74 +78,85 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     testOptions.unitTests.includeAndroidResources = true
+    testOptions.unitTests.all {
+        jvmArgs '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED'
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
+kotlin { compilerOptions { jvmTarget = JvmTarget.JVM_1_8 } }
+
 dependencies {
-    implementation 'com.google.firebase:firebase-common:20.3.1'
-    implementation 'com.google.firebase:firebase-components:17.1.0'
-    implementation 'com.google.firebase:firebase-installations-interop:17.1.0'
-    implementation 'com.google.firebase:firebase-datatransport:18.1.7'
-    implementation 'com.google.android.datatransport:transport-api:3.0.0'
-    implementation 'com.google.android.datatransport:transport-runtime:3.1.8'
-    implementation 'com.google.android.datatransport:transport-backend-cct:3.1.8'
-    implementation 'com.google.firebase:firebase-encoders:17.0.0'
-    implementation 'com.google.firebase:firebase-encoders-json:18.0.0'
-    implementation "com.google.firebase:firebase-encoders-proto:16.0.0"
-    implementation "com.google.firebase:firebase-installations:17.1.3"
-    annotationProcessor project(":encoders:firebase-encoders-processor")
+        javadocClasspath libs.autovalue.annotations
 
-    implementation 'androidx.annotation:annotation:1.2.0'
-    implementation "com.google.android.gms:play-services-tasks:18.0.1"
-    implementation "com.google.android.gms:play-services-basement:18.1.0"
-    implementation 'com.google.android.gms:play-services-base:18.0.1'
-    implementation 'com.google.android.gms:play-services-stats:17.0.2'
-    implementation 'com.google.firebase:firebase-measurement-connector:19.0.0'
-    implementation "com.google.firebase:firebase-iid-interop:17.1.0"
-    implementation 'com.google.android.gms:play-services-cloud-messaging:17.0.1'
-    implementation "com.google.errorprone:error_prone_annotations:2.9.0"
-    testImplementation ("com.google.api-client:google-api-client:1.30.9") {
-        exclude group: "org.apache.httpcomponents", module: "httpclient"
-    }
-    testCompileOnly 'com.google.auto.value:auto-value-annotations:1.6.3'
-    testAnnotationProcessor "com.google.auto.value:auto-value:1.6.3"
+        api(libs.firebase.common)
+        api(libs.firebase.components)
+        api('com.google.firebase:firebase-datatransport:18.2.0') {
+         exclude group: 'com.google.firebase', module: 'firebase-common'
+         exclude group: 'com.google.firebase', module: 'firebase-components'
+        }
+        api 'com.google.firebase:firebase-encoders:17.0.0'
+        api 'com.google.firebase:firebase-encoders-json:18.0.0'
+        api "com.google.firebase:firebase-encoders-proto:16.0.0"
+        api "com.google.firebase:firebase-iid-interop:17.1.0"
+        api("com.google.firebase:firebase-installations:18.0.0") {
+          exclude group: 'com.google.firebase', module: 'firebase-common-ktx'
+        }
+        api('com.google.firebase:firebase-installations-interop:17.1.0')
+        api('com.google.firebase:firebase-measurement-connector:19.0.0')
 
-    javadocClasspath 'com.google.auto.value:auto-value-annotations:1.6.6'
+        implementation libs.androidx.annotation
+        implementation 'com.google.android.datatransport:transport-api:3.1.0'
+        implementation 'com.google.android.datatransport:transport-backend-cct:3.1.8'
+        implementation 'com.google.android.datatransport:transport-runtime:3.1.8'
+        implementation libs.bundles.playservices
+        implementation libs.play.services.cloud.messaging
+        implementation libs.play.services.stats
+        implementation libs.errorprone.annotations
+        implementation libs.kotlin.stdlib
 
-    testImplementation "androidx.test:core:$androidxTestCoreVersion"
-    testImplementation 'com.google.android.gms:play-services-cloud-messaging:17.0.1'
-    testImplementation 'androidx.test:rules:1.2.0'
-    testImplementation 'androidx.test:runner:1.2.0'
-    testImplementation "org.robolectric:robolectric:$robolectricVersion"
-    testImplementation 'junit:junit:4.13-beta-2'
-    testImplementation 'org.mockito:mockito-core:2.25.0'
-    testImplementation "com.google.truth:truth:$googleTruthVersion"
-    testImplementation 'com.google.android.gms:play-services-vision:20.1.3'
-    testImplementation ("com.google.firebase:firebase-iid:21.1.0") {
-        exclude group: "com.google.firebase", module: "firebase-common"
-        exclude group: "com.google.firebase", module: "firebase-components"
-        exclude group: "com.google.firebase", module: "firebase-installations-interop"
-        exclude group: "com.google.firebase", module: "firebase-installations"
-    }
+        annotationProcessor project(":encoders:firebase-encoders-processor")
 
-    testImplementation 'com.android.support.test:runner:1.0.2'
-    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
-    testImplementation 'com.google.guava:guava-testlib:12.0-rc2'
-    testImplementation 'androidx.test.espresso:espresso-intents:3.2.0'
-    testImplementation 'androidx.test:rules:1.2.0'
-    testImplementation 'androidx.test.ext:truth:1.4.0'
-    testImplementation 'androidx.test.services:test-services:1.2.0'
-    testImplementation 'androidx.core:core:1.6.0'
+        testAnnotationProcessor libs.autovalue
 
-    androidTestImplementation project(':integ-testing')
-    androidTestImplementation "androidx.test.ext:junit:$androidxTestJUnitVersion"
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation "com.google.truth:truth:$googleTruthVersion"
-    androidTestImplementation 'junit:junit:4.12'
-    androidTestImplementation "androidx.annotation:annotation:1.0.0"
-    androidTestImplementation 'org.mockito:mockito-core:2.25.0'
-    androidTestImplementation 'org.mockito:mockito-inline:2.25.0'
+        testImplementation libs.androidx.core
+        testImplementation libs.androidx.test.core
+        testImplementation libs.androidx.test.rules
+        testImplementation libs.androidx.test.runner
+        testImplementation libs.androidx.espresso.intents
+        testImplementation libs.androidx.test.truth
+        testImplementation libs.androidx.test.services
+        testImplementation libs.runner
+        testImplementation libs.jackson.databind
+        testImplementation libs.play.services.cloud.messaging
+        testImplementation libs.play.services.vision
+        testImplementation (libs.google.api.client) {
+         exclude group: "org.apache.httpcomponents", module: "httpclient"
+     }
+        testImplementation ("com.google.firebase:firebase-iid:21.1.0") {
+         exclude group: "com.google.firebase", module: "firebase-common"
+         exclude group: "com.google.firebase", module: "firebase-components"
+         exclude group: "com.google.firebase", module: "firebase-installations-interop"
+         exclude group: "com.google.firebase", module: "firebase-installations"
+     }
+        testImplementation 'com.google.guava:guava-testlib:12.0-rc2'
+        testImplementation libs.truth
+        testImplementation libs.junit
+        testImplementation libs.mockito.core
+        testImplementation libs.robolectric
+
+        testCompileOnly libs.autovalue.annotations
+
+        androidTestImplementation(project(":integ-testing")){
+        exclude group: 'com.google.firebase', module: 'firebase-common'
+        exclude group: 'com.google.firebase', module: 'firebase-components' }
+        androidTestImplementation libs.androidx.annotation
+        androidTestImplementation libs.androidx.test.runner
+        androidTestImplementation libs.androidx.test.junit
+        androidTestImplementation libs.truth
+        androidTestImplementation libs.junit
+        androidTestImplementation libs.mockito.core
 }
